criacao do estilo e input text no index

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/estilo.css">
+
 	<title>TELA DE INICIAL</title>
-	<h2>TELA INICIAL</h2>
+	
 </head>
 <body>
+	<h2>TELA INICIAL</h2>
 
+	<input type="text" placeholder="Usuario" class="campo">
 </body>
 </html>
