modificacoes css e inclusao pasta img

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 	
 </head>
 <body>
-	<h2>TELA INICIAL</h2>
+	<div class="container">
+		<h2>A SUA LOJA DE GAMES!!</h2>	
+	</div>
+	<div>
+		<img src="img/logo.jpg">
+	</div>
 
 	<input type="text" placeholder="Usuario" class="campo">
 </body>
