--- a/index.html
+++ b/index.html
@@ -9,13 +9,58 @@
 	
 </head>
 <body>
-	<div class="container">
-		<h2>A SUA LOJA DE GAMES!!</h2>	
-	</div>
-	<div>
-		<img src="img/logo.jpg">
+	<div class="containerSlog">
+		<a>A SUA LOJA DE GAMES!!</a>	
 	</div>
 
-	<input type="text" placeholder="Usuario" class="campo">
+	<div class="containerMenu">
+		<table class='tablemenu'>
+			<td class='tdsloganimg'>
+				<img src="img/logo.jpg">
+			</td>
+		
+			<td class='tdmenu'> 
+				<a href="url">Produtos</a>
+				<a href="url">Login</a>
+			</td>
+
+			<td class='tdscarrinhoimg'> 
+				<img src="img/carrinho.png">
+			</td>
+		</table>
+	</div>
+
+	<div class="containerfundo">
+		<div class="frasecadastrar">CADASTRE-SE E GANHE 10% NA SUA PRIMEIRA COMPRA!</div>
+		<div class="buttoncadastrar"><button>CADASTRAR</button></div>	
+	</div>
+
+	<div class="containerprodutos">
+		<table class="tableprodutosmaisvend" border=1>
+		<tr>	
+			<td>
+				<a class="pprodutosmaisvendidos">PRODUTOS MAIS VENDIDOS!</a>
+			</td>
+			
+		</tr>
+
+		<tr>
+			<td>
+				<a class="pprodutosmaisvendidos">PRODUTOS MAIS VENDIDOS!</a>
+			</td>
+		</tr>
+
+		<tr>	
+			<td>
+				<a class="pprodutosmaisvendidos">PRODUTOS MAIS VENDIDOS!</a>
+			</td>
+		</tr>
+
+	</table>
+	</div>
+	
+	
+
+	<!--<input type="text" placeholder="Usuario" class="campo">-->
 </body>
 </html>
