css do cadastro

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -7,16 +7,16 @@
     </head>
 
     <body>
-        <h2>Formulário de Cadastro</h2>
+        <h2 class="font-text">Formulário de Cadastro</h2>
 
-        <input type="text" id="usuario" placeholder="Usuario" size="20"/><br>
-        <input type="text" id="nome" placeholder="Nome" size="20"/><br>
-        <input type="text" id="sobrenome" placeholder="Sobrenome" size="20"/> <br>
-        <input type="password" id="senha" placeholder="Senha" size="20"/><br>
-        <input type="text" id="endereco" placeholder="Endereco" size="50"/> <br><br>
+        <input class="css-input" type="text" id="usuario" placeholder="Usuario" size="20"/><br>
+        <input class="css-input" type="text" id="nome" placeholder="Nome" size="20"/><br>
+        <input class="css-input" type="text" id="sobrenome" placeholder="Sobrenome" size="20"/> <br>
+        <input class="css-input" type="password" id="senha" placeholder="Senha" size="20"/><br>
+        <input class="css-input" type="text" id="endereco" placeholder="Endereco" size="50"/> <br><br>
 
                 
-        <button onclick="salvarCadastro()" class="div-card-button" >Gravar</button> <br><br>
+        <button onclick="salvarCadastro()" class="button" >Gravar</button> <br><br>
 
 
         <a href="../index.html"> Voltar</a>
