modificacao onclick button cadastro

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	<div class="container-fundo">
 		<div class="titulo-cadastrar">CADASTRE-SE E GANHE 10% NA SUA PRIMEIRA COMPRA!</div>
-		<div class="buttoncadastrar"><button class="buttonstyle">CADASTRAR</button></div>	
+		<div class="buttoncadastrar"><button onclick="window.location.href='pages/cadastro.html'" class="buttonstyle">CADASTRAR</button></div>	
 	</div>
 
 	<div class="container-produtos">
