--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -2,7 +2,7 @@
 
     <head>
         <meta charset="utf-8">
-        <script src="../js/script.js"></script>
+        <script src="../js/script-cadastro.js"></script>
         <link rel="stylesheet" href="../css/estilos-cadastro.css">
     </head>
 
