modificacoes login.html

--- a/pages/login.html
+++ b/pages/login.html
@@ -16,7 +16,7 @@
         <button onclick="window.location.href='../pages/cadastro.html'" class="buttonLogin" >Cadastrar</button> <br><br>
 
 
-        <a href="/pages/login.html"> Voltar</a>
+        <a href="../index.html"> Voltar</a>
         
     </body>
 </html>
