inclusao produtos html e css

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			</td>
 		
 			<td class='tdmenu'> 
-				<a href="url">Produtos</a>
-				<a href="pages/login.html">Login</a>
+				<a style="font-size: 20px;color: rgb(235, 195, 20);" href="pages/produtos.html">PRODUTOS</a>
+				<a style="font-size: 20px;color: rgb(235, 195, 20);" href="pages/login.html">LOGIN</a>
 			</td>
 
 			<td class='tdscarrinhoimg'> 
@@ -57,7 +57,7 @@
 
 		<tr>	
 			<td style="padding-top: 100px;" colspan="3">
-				<div><button class="buttonstyle">MAIS OPÇÕES</button></div>
+				<div><button onclick="window.location.href='pages/produtos.html'" class="buttonstyle">MAIS OPÇÕES</button></div>
 			</td>
 		</tr>
 		</table>
