--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -9,7 +9,7 @@
     <body>
         <h2 class="font-textProdutos">JOGOS DISPONÍVEIS!</h2>
 
-        <h1 class="font-textProdutos">Click em um ou mais jogos para COMPRAR!</h1>
+        <h1 class="font-textProdutos">Click em um ou mais jogos para ADICIONAR AO CARRINHO!</h1>
         <table class="table-produtos">
 
             <tr>
@@ -23,13 +23,25 @@
             </tr>
 
             <tr>
-                <td> <img width= "200" height="200" src="../img/gamecyberpunk.jpg" class="contorno-img"> </td>
-                <td> <img width= "200" height="200" src="../img/gamebattlefield2042.jpg" class="contorno-img"> </td>
-                <td> <img width= "200" height="200" src="../img/gamedmc.jpg" class="contorno-img"> </td>
-                <td> <img width= "200" height="200" src="../img/gamegodofwar.jpg" class="contorno-img"> </td>
-                <td> <img width= "200" height="200" src="../img/gamenewworld.jpg" class="contorno-img"> </td>
-                <td> <img width= "200" height="200" src="../img/gamefifa22.jpg" class="contorno-img"> </td>
-                <td> <img width= "200" height="200" src="../img/gameforza5.jpg" class="contorno-img"> </td>
+                <td> <img onclick="adicionarprod(this.id)" id="gamecyberpunk" width= "200" height="200" src="../img/gamecyberpunk.jpg" class="contorno-img">
+                </td>
+                <td> <img onclick="adicionarprod(this.id)" id="gamebattlefield2042" width= "200" height="200" src="../img/gamebattlefield2042.jpg" class="contorno-img"> 
+
+                </td>
+                <td> <img onclick="adicionarprod(this.id)" id="gamedmc" width= "200" height="200" src="../img/gamedmc.jpg" class="contorno-img"> 
+
+                </td>
+                <td> <img onclick="adicionarprod(this.id)" id="gamegodofwar" width= "200" height="200" src="../img/gamegodofwar.jpg" class="contorno-img"> 
+
+                </td>
+                <td> <img onclick="adicionarprod(this.id)" id="gamenewworld" width= "200" height="200" src="../img/gamenewworld.jpg" class="contorno-img"> 
+
+                </td>
+                <td> <img onclick="adicionarprod(this.id)" id="gamefifa22" width= "200" height="200" src="../img/gamefifa22.jpg" class="contorno-img"> 
+                </td>
+                <td> <img onclick="adicionarprod(this.id)" id="gameforza5" width= "200" height="200" src="../img/gameforza5.jpg" class="contorno-img"> 
+
+                </td>
             </tr>
 
         </table>  
