criacao Carrinho e JS

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</td>
 
 			<td class='tdscarrinhoimg'> 
-				<img src="img/carrinho.png">
+				<img onclick="window.location.href='pages/carrinho.html'" style="cursor: pointer;" src="img/carrinho.png">
 			</td>
 		</table>
 	</div>
