adicao de titulos

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <script src="../js/script-cadastro.js"></script>
         <link rel="stylesheet" href="../css/estilos-cadastro.css">
+
+        <title>MG-CADASTRO</title>
     </head>
 
     <body>
