--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <script src="../js/script-carrinho.js"></script>
         <link rel="stylesheet" href="../css/estilos-carrinho.css">
+
+        <title>MG-CARRINHO</title>
     </head>
 
     <body>
