--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <script src="../js/script-produtos.js"></script>
         <link rel="stylesheet" href="../css/estilos-produtos.css">
+
+        <title>MG-PRODUTOS</title>
     </head>
 
     <body>
