--- a/pages/login.html
+++ b/pages/login.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <script src="../js/script-login.js"></script>
         <link rel="stylesheet" href="../css/estilos-login.css">
+
+        <title>MG-LOGIN</title>
     </head>
 
     <body>
