algumas ateracoes main

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 	</div>
 	
 	<div style="background-color: brown;height: 40px;"></div>
-	<div style="background-color: #eb9996;height: 400px;"></div>
+	<div style="background-color: #eb9996;height: 400px;">
+		<a style="font-size: 25px;color: rgb(214, 8, 187);font-weight: bold;">COMENTÁRIOS DE ALGUM DOS NOSSOS CLIENTES:</a><br>
+	</div>
 	<div style="background-color: brown;height: 40px;"></div>
 	<div class="container-contatos">
 		<a>Endereço: Rua Arapongas, 445 - São José dos Pinhais</a><br>
