--- a/index.html
+++ b/index.html
@@ -74,7 +74,17 @@
 	
 	<div style="background-color: brown;height: 40px;"></div>
 	<div style="background-color: #eb9996;height: 400px;">
-		<a style="font-size: 25px;color: rgb(214, 8, 187);font-weight: bold;">COMENTÁRIOS DE ALGUM DOS NOSSOS CLIENTES:</a><br>
+		<a style="font-size: 25px;color: rgb(214, 8, 187);font-weight: bold;">COMENTÁRIOS DE ALGUM DOS NOSSOS CLIENTES:</a><br><br><br>
+		<table>
+			<tr>
+				<td>
+					<img style="width: 150px;height: 150px;border-radius: 10px;"src="img/cars.jpg">
+				</td>
+				<td>
+					<a style="font-size: 25px;color: rgb(214, 8, 187);font-weight: bold;">Jorginho_Naruto: CARACA, O MAURÃO GAMES É O SITE MAIS BARATO!!</a><br><br><br>
+				</td>
+			</tr>
+		</table>
 	</div>
 	<div style="background-color: brown;height: 40px;"></div>
 	<div class="container-contatos">
